# ModpackChangelogger

./: .gitignore  2.py  Changelog.md  Getmodname.py  Main.py  ModpackChangelogger.py  MrpackChangelogger.py  Project Changelog.md  README.md  compare_packs.py  config_handler.py  constants.py  get_json.py  get_mod_name.py  log.txt  modpack-changelogger.spec  modpack_changelogger.py  modpack_changelogger_exe.py  out.py  pyproject.toml  setup.py
.github/workflows/: Build-pyinstaller.yml  Build-release.yml  Build.yml  Release.yml  codeql.yml  exe-publish.yml  publish-pypi.yml  pypi-publish.yml  python-publish.yml  test.yml
modpack_changelogger/: __init__.py  __main__.py  cli_wrapper.py  compare_packs.py  config_handler.py  constants.py  extract_pack_data.py  get_json.py  get_mod_names.py  main.py  out.py  overrides_detection.py  utils.py
modpack_changelogger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: ModpackChangelogger.py  TMP.py  __init__.py  compare_packs.py  config_handler.py  console  constants.py  extract_pack_data.py  get_json.py  get_mod_name.py  get_mod_names.py  main.py  out.py  overrides_detection.py
src/modpack_changelogger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: test.py  test_.py
test/configs/: broken_config.json  check_options.json  comma.json  config1.json  config2.json  header.json  ind_bullet.json  ind_comma.json
test/expected/: cf.md  check_options.md  comma.md  console.md  header.md  ind_bullet.md  ind_comma.md  run_as_script.md  t1.md  t2.md  t3.md  t4.md  t5.md  unformatted.md
test/packs/: new.mrpack  old2.mrpack
test/utils/: Generate expected.py
tests/: new.json  new2.json  new2.mrpack  old.json  old.mrpack  old2.json  test_config_handler.py
